--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>FitLife Gym</title>
   <meta name="robots" content="max-image-preview:large">
 	
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="solution/css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
 
     <header class="header">
               <a href="index.html" class="logo">
-              <img src="imagens/opp.png">
+              <img src="solution/imagens/opp.png">
           </a>
         <div id="menu-btn" class="fas fa-bars"></div>
 
@@ -42,7 +42,7 @@
 
  <div class="swiper-wrapper">
 
- <div class="swiper-slide slide" style="background: url(imagens/paul.jpg) no-repeat;"></span><br class="hidden-xs">
+ <div class="swiper-slide slide" style="background: url(solution/imagens/paul.jpg) no-repeat;"></span><br class="hidden-xs">
  <div class="content">
  <span>Tenha qualidade de vida,seja Fit</span>
   <h3>Dê o primeiro passo para mudar a sua trajetória.</h3>
@@ -50,7 +50,7 @@
   </div>
   </div>
 
-  <div class="swiper-slide slide" style="background: url(imagens/dois.jpg) no-repeat;"></span><br class="visible-xs">
+  <div class="swiper-slide slide" style="background: url(solution/imagens/dois.jpg) no-repeat;"></span><br class="visible-xs">
  <div class="content">
     <span>Tenha qualidade de vida,seja Fit</span>
     <h3>Dê o primeiro passo para mudar a sua trajetória.</h3>
@@ -59,7 +59,7 @@
           </div>
          </div>
 
-        <div class="swiper-slide slide" style="background: url(imagens/ai.png) no-repeat;"></span><br class="hidden-xs">
+        <div class="swiper-slide slide" style="background: url(solution/imagens/ai.png) no-repeat;"></span><br class="hidden-xs">
         <div class="content">
          <span>Tenha qualidade de vida,seja Fit</span>
          <h3>Dê o primeiro passo para mudar a sua trajetória.</h3>
@@ -122,7 +122,7 @@
             <div class="box-container">
 
                 <div class="box">
-                    <img src="imagens\marco.jpg" alt="treinador da academia">
+                    <img src="solution/imagens\marco.jpg" alt="treinador da academia">
                     <div class="content">
                         <span>Personal</span>
                         <h3>Marcelo Silva</h3>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="imagens/pm.png" alt="treinadora da academia">
+                    <img src="solution/imagens/pm.png" alt="treinadora da academia">
                     <div class="content">
                         <span>Personal</span>
                         <h3>Juliana Rocha</h3>
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="imagens/persona03.png" alt="treinador da academia">
+                    <img src="solution/imagens/persona03.png" alt="treinador da academia">
                     <div class="content">
                         <span>Personal</span>
                         <h3>Erick Fontelli</h3>
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="box">
-                    <img src="imagens/persona4.png" alt="treinadora da academia">
+                    <img src="solution/imagens/persona4.png" alt="treinadora da academia">
                     <div class="content">
                         <span>Personal</span>
                         <h3>Luiza Oliveira</h3>
@@ -262,7 +262,7 @@
 
                     <div class="swiper-slide slide">
                         <div class="image">
-                            <img src="imagens/grupo1.png" alt="pessoas em aula funcional">
+                            <img src="solution/imagens/grupo1.png" alt="pessoas em aula funcional">
                         </div>
                         <div class="content">
                             <div class="link"><a href="#">por admin</a><span>|</span><a href="#">22 Janeiro, 2024</a>
@@ -275,7 +275,7 @@
 
                     <div class="swiper-slide slide">
                         <div class="image">
-                            <img src="imagens/emagrecer.png" alt="mulher acima do peso tentando emagrecer">
+                            <img src="solution/imagens/emagrecer.png" alt="mulher acima do peso tentando emagrecer">
                         </div>
                         <div class="content">
                             <div class="link"> <a href="#">por admin</a> <span>|</span> <a href="#">15 Fevereiro, 2024</a>
@@ -288,7 +288,7 @@
 
                     <div class="swiper-slide slide">
                         <div class="image">
-                            <img src="imagens/crianca.png" alt="crianças em aula de box">
+                            <img src="solution/imagens/crianca.png" alt="crianças em aula de box">
                         </div>
                         <div class="content">
                             <div class="link"> <a href="#">por admin</a> <span>|</span> <a href="#">20 Março, 2024</a>
@@ -301,7 +301,7 @@
 
                     <div class="swiper-slide slide">
                         <div class="image">
-                            <img src="imagens/3idade.png" alt="idosos exercitando">
+                            <img src="solution/imagens/3idade.png" alt="idosos exercitando">
                         </div>
                         <div class="content">
                             <div class="link"> <a href="#">por admin</a> <span>|</span> <a href="#">22 Abril, 2024</a>
@@ -314,10 +314,10 @@
 
                     <div class="swiper-slide slide">
                         <div class="image">
-                            <img src="imagens/pilates.png" alt="mulher grávida pilates">
+                            <img src="solution/imagens/pilates.png" alt="mulher grávida pilates">
                         </div>
                         <div class="content">
-                            <div class="link"> <a href="#">por admin</a> <span>|</span> <a href="#">08 Maio, 2024</a>
+                            <div class="link"><a href="#">por admin</a> <span>|</span> <a href="#">08 Maio, 2024</a>
                             </div>
                             <h3>Mulheres grávidas e o pilates</h3>
                             <p>Veja aqui os motivos pelos quais uma futura mamãe deve pensar no pilates como um auxiliador durante a gravidez. </p>
@@ -352,9 +352,9 @@
                 <p><i class="fas fa-map"></i> Porto, Portugal</p>
                
                  <div class="share">
-            <a href="instagram.com"><img src="imagens\loginst.png"></a>
-            <a href="instagram.com"><img src="imagens\logface.png"></a>
-            <a href="instagram.com"><img src="imagens\logwhats.png"></a>
+            <a href="instagram.com"><img src="solution\imagens\loginst.png"></a>
+            <a href="instagram.com"><img src="solution\imagens\logface.png"></a>
+            <a href="instagram.com"><img src="solution\imagens\logwhats.png"></a>
                 </div>
             </div>
  
@@ -387,7 +387,7 @@
 
   <!-- jQuery (comandos JS) -->
    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-   <script src="js/script.js"></script>
+   <script src="solution/js/script.js"></script>
 
 
 </body>
