--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     </div>
 <div class="whats">
     <a href="https://wa.me//351924888474text=Tenho%20interesse%20em%20me%20smatricular%20" target="_blank">
-    <img src="imagens/whatsapp.png" width="72px" alt="fale conosco pelo whatsapp" title="Fale conosco"></div>
+    <img src="solution/imagens/whatsapp.png" width="72px" alt="fale conosco pelo whatsapp" title="Fale conosco"></div>
 
   </footer>
 
